<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/startMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:padding="32dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="8dp"
        android:text="@string/get_started"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/surpriseImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-36dp"
        android:layout_marginEnd="-7dp"
        android:contentDescription="@string/for_decoration"
        android:src="@drawable/paimon_find_chest_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"/>

    <TextView
        android:id="@+id/title_dscrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/started_msg"
        android:textColor="#867D6B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <Button
        android:id="@+id/btnContinueWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="3dp"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:text="@string/continue_with_google"
        android:textColor="@color/title_text"
        android:textSize="18sp"
        app:backgroundTint="#FBFAF5"
        app:cornerRadius="24dp"
        app:icon="@drawable/google_icon"
        app:iconGravity="start"
        app:iconPadding="0dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_dscrip"
        app:strokeColor="@color/button_stroke"
        app:strokeWidth="1dp"/>

    <Button
        android:id="@+id/btnContinueWithEmail"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:onClick="openSignInFromStart"
        android:stateListAnimator="@null"
        android:text="@string/continue_with_email"
        android:textColor="@color/title_text"
        android:textSize="18sp"
        app:backgroundTint="#FBFAF5"
        app:cornerRadius="24dp"
        app:icon="@drawable/email_icon"
        app:iconGravity="start"
        app:iconPadding="-9dp"
        app:iconTint="@color/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinueWithGoogle"
        app:strokeColor="@color/button_stroke"
        app:strokeWidth="1dp"/>

    <Button
        android:id="@+id/btnBackToPin"
        android:onClick="openPinUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:textSize="19sp"
        android:text="@string/back_to_pin"
        android:textColor="@color/button_text"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinueWithEmail"/>

</androidx.constraintlayout.widget.ConstraintLayout>