<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/EmailVerificationMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/forgot_your_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/awkward_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/for_decoration"
        android:src="@drawable/wanderer_awkward_image"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/enterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_email_msg"
        android:textSize="19sp"
        android:textColor="#867D6B"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="14sp"
        android:textColor="@color/title_text"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="#333333"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_marginTop="96dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/button_green"
        app:cornerRadius="28dp"
        android:text="@string/send_email"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:elevation="2dp"
        android:translationZ="1dp"
        android:stateListAnimator="@null"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"/>

    <Button
        android:id="@+id/btnBackToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:textSize="18sp"
        android:text="@string/back_to_sign_in"
        android:textColor="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSendEmail"/>

    <ImageView
        android:id="@+id/happy_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/for_decoration"
        android:src="@drawable/wanderer_happy_image"
        android:layout_marginBottom="128dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/waitAMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/wait_a_minute"
        android:textSize="16sp"
        android:textColor="@color/button_text"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/happy_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>