<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#3E3627"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_width="0dp"
        android:hint="@string/email"
        android:textColorHint="@color/button_text"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextColor="@color/button_text"
        app:boxStrokeColor="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/icon"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:textColorHint="@color/button_text"
        app:hintTextColor="@color/button_text"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:startIconDrawable="@drawable/lock_icon"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/icon"
        app:endIconTint="@color/button_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_text"
            android:inputType="textPassword"
            android:autofillHints="password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnForgetPassword"
        android:onClick="openEmailVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="-20dp"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/button_green"
        android:layout_marginTop="80dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="#FAFAFA"
        app:iconTint="@null"
        app:cornerRadius="24dp"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:stateListAnimator="@null"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForgetPassword"/>

    <Button
        android:id="@+id/btnSignUp"
        android:onClick="openRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:textSize="18sp"
        android:text="@string/new_user_sign_up"
        android:textColor="#6A5E47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"/>



</androidx.constraintlayout.widget.ConstraintLayout>