<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/register"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:textColor="@color/title_text"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/icon"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/check_icon"
        app:endIconTint="@color/button_green"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:textColor="@color/title_text"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:startIconDrawable="@drawable/lock_icon"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/check_icon"
        app:endIconTint="@color/button_green"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:inputType="textPassword"
            android:autofillHints="newPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="14sp"
        android:textColor="@color/title_text"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        app:startIconDrawable="@drawable/lock_icon"
        app:startIconTint="#443B2B"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/check_icon"
        app:endIconTint="@color/button_green"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:inputType="textPassword"
            android:autofillHints="newPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/termsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="-5dp"
        android:paddingEnd="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Checkbox"
            app:buttonTint="@color/button_green"/>

        <TextView
            android:id="@+id/textTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/title_text"
            android:layout_marginStart="4dp"
            android:text="@string/agree_to_terms_and_conditions"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_marginTop="56dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/button_green"
        app:cornerRadius="28dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/text_white"
        android:elevation="2dp"
        android:translationZ="1dp"
        android:stateListAnimator="@null"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsContainer"/>

    <Button
        android:id="@+id/btnSignIn"
        android:onClick="openSignInFromRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:textSize="18sp"
        android:text="@string/old_user_sign_in"
        android:textColor="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>